# rideshare-analysis

./: .env  Pipfile  config.yaml  pyproject.toml  requirements.txt
config/: table_config.yaml
sql/: pull_reports.sql
src/rideshare-analysis/: config.yaml  generate_flags.py  get_connection.py  parse_data.py  write_to_database.py
