[project]
name = "rideshare-analysis"
version = "0.1.0"
description = "Code to flatten plaid reports and run analysis for customers with rideshare."
requires-python = "=3.12"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"